# gmu-project

./: .gitignore  .stylish-haskell.yaml  CMakeLists.txt  Makefile  cabal.project  cifar10.cpp  convnn.cpp  convnn.hpp  data.cpp  data.hpp  flake.nix  hie.yaml  include.hpp  kernel.c  kernel.cl  kernel.h  mnist.cpp  nn-accelerate-cuda.cabal  opencl.cpp  opencl.hpp  thesis.cpp
app/: Main.hs
doc/: feedforward.prof  gmu-template.tex  titlepage.tex
doc-presentation/: pres.odp
grenade/: grenade.cabal
grenade/examples/: grenade-examples.cabal
grenade/examples/main/: feedforward.hs  gan-mnist.hs  mnist.hs  recurrent.hs  shakespeare.hs
grenade/src-gmu/: kernel.cl
grenade/src-gmu/Grenade/: OpenCL.hs
grenade/src-gmu/Grenade/OpenCL/: Context.hs  FullyConnected.hs
grenade/src/Grenade/Core/: Layer.hs  Network.hs  Shape.hs
grenade/src/Grenade/Recurrent/Core/: Network.hs
src/Gmu/: Command.hs  Instance.hs  Monad.hs  Neural.hs  Quasi.hs
