cabal-version:  2.4
name:           nn-accelerate-cuda
version:        0.1.0.0
author:         Jakub Zárybnický
maintainer:     jakub@zarybnicky.com
copyright:      2020 Jakub Zárybnický
license:        BSD-3-Clause
build-type:     Simple

common shared
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
  default-extensions:
                       DataKinds
                       DefaultSignatures
                       DeriveFoldable
                       DeriveFunctor
                       DeriveTraversable
                       DerivingStrategies
                       DuplicateRecordFields
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       MagicHash
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       NumDecimals
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RoleAnnotations
                       ScopedTypeVariables
                       StandaloneDeriving
                       Strict
                       TupleSections
                       TypeApplications
                       TypeFamilyDependencies
                       TypeOperators
                       TypeSynonymInstances
                       ViewPatterns

library
  import: shared
  hs-source-dirs:      src
  exposed-modules:     Gmu.Command
                       Gmu.Instance
                       Gmu.Neural
                       Gmu.Monad
                       Gmu.Quasi

  build-depends:       base >=4.7 && <5
                     , JuicyPixels
                     , VulkanMemoryAllocator
                     , autoapply >= 0.4
                     , bytestring
                     , mtl
                     , resourcet
                     , safe-exceptions
                     , say
                     , template-haskell
                     , text
                     , transformers
                     , vector
                     , vulkan
                     , vulkan-utils

executable nn
  import: shared
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -O2

  build-depends:       base >=4.7 && <5
                     , nn-accelerate-cuda
                     , hmatrix
