cabal-version:  2.4
name:           nn-accelerate-cuda
version:        0.1.0.0
author:         Jakub Zárybnický
maintainer:     jakub@zarybnicky.com
copyright:      2020 Jakub Zárybnický
license:        BSD-3-Clause
build-type:     Simple

common shared
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs

library
  import: shared
  hs-source-dirs:      src
  exposed-modules:     Gmu.Neural

  build-depends:       base >=4.7 && <5
                     , CLUtil
                     , OpenCL
                     , bytestring
                     , file-embed
                     , hmatrix
                     , mtl
                     , storable-record
                     , template-haskell
                     , text
                     , transformers
                     , vector
                     , vector-sized

executable nn
  import: shared
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -O2

  build-depends:       base >=4.7 && <5
                     , nn-accelerate-cuda
